Updated code with some features from Java > 8 version